[package]
name = "signal-space"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "Signal Space graph, timeline, inspector, and intent types for Rust"
license = "MIT"
repository = "https://github.com/signal-space/signal-space-rs"
keywords = ["signals", "graph", "mcp", "lazily", "reactive"]
categories = ["data-structures"]

[features]
default = []
lazily-runtime = ["dep:lazily"]

[dependencies]
lazily = { git = "https://github.com/lazily-hub/lazily-rs", package = "lazily", features = ["ipc"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[package.metadata.signal-space]
spec-version = "0.3.0"
spec-repository = "https://github.com/signal-space/signal-space-spec"
